syntax = "proto3";
package users;

option go_package = "./;userservice";

message RegReq {
  string name  = 1;
  string email = 2;
  string role  = 3;
  string password = 4;
}
message RegRes {
  string token = 1;
  string session_key = 2;
}

message LogReq {
  string name  = 1;
  string email = 2;
  string password = 3;
}
message LogRes {
  string token = 1;
  string session_key = 2;
}

message ExtJWTDataReq {
  string token = 1;
  string session_key = 2;
}
message ExtJWTDataRes {
  string role = 1;
  string user_id = 2;
  string token = 3;
}

message DelUserReq {
  string role = 1;
  string user_id = 2;
  string del_user_id = 3;
  string session_key = 4;
}
message DelUserRes{}

service UserService {
  rpc RegUser (RegReq) returns (RegRes);
  rpc LogUser (LogReq) returns (LogRes);
  rpc ExtJWTData (ExtJWTDataReq) returns (ExtJWTDataRes);
  rpc DelUser (DelUserReq) returns (DelUserRes);
}
